<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="serviceUrl">http://edusty.azurewebsites.net/api/V3/</string>
    <!-- >http://192.168.1.33/api/V2/ -->
    <!-- http://edusty.azurewebsites.net/api/V2/ -->
    <string name="app_name">Edusty</string>
    <string name="title_activity_vk_auth">Авторизация</string>
    <string name="title_activity_main">Edusty</string>
    <string name="title_activity_search_university">Поиск</string>
    <string name="title_activity_create_group">Создание группы</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_message">Запись</string>
    <string name="vk">ВК</string>
    <string name="title_section1">Лента новостей</string>
    <string name="title_section2">Моя группа</string>
    <string name="title_section3">Профиль</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="create">Создать</string>
    <string name="ok">ОК</string>
    <string name="new_message">Новая запись</string>
    <string name="general">Основные</string>
    <string name="profile">Профиль</string>
    <string name="write_developer">Написать разработчикам</string>
    <string name="quit">Выйти</string>
    <string name="login_with">Войти через</string>
    <string name="complete">Готово</string>
    <string name="next">Далее</string>
    <string name="version">Версия</string>
    <string name="what_your_university">В каком ВУЗе Вы учитесь?</string>
    <string name="what_your_group">В какой группе Вы учитесь?</string>
    <string name="about_program">О программе</string>
    <string name="send">Отправить</string>
    <string name="add">Добавить</string>
    <string name="error">Произошла ошибка. Попробуйте снова</string>
    <string name="loading">Загрузка…</string>
    <string name="app_data">EdustyData</string>
    <string name="enter_group_name">Введите название группы</string>
    <string name="enter_message_text">Сообщение…</string>
    <string name="save">Сохранить</string>
    <string name="group_name">Название группы</string>
    <string name="leave">Выйти</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="delete">Удалить</string>
    <string name="facebook">Facebook</string>
    <string name="odnoklassniki">Одноклассники</string>
    <string name="google">Google</string>
    <string name="vkontakte">Вконтакте</string>
    <string name="attachments">Вложений: </string>
    <string name="comments">Комментариев: </string>
    <string name="title_activity_edusty_auth_activty">Авторизация</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="signin">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="edit">Редактировать</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="restore">Восстановить</string>
    <string name="title_activity_edusty_regiser_activty">Регистрация</string>
    <string name="title_activity_edusty_forgot_password_activty">Восстановление пароля</string>
    <string name="change_password">Сменить пароль</string>
    <string name="accept">Применить</string>
    <string name="title_activity_edusty_change_password_activty">Смена пароля</string>
    <string name="terms_of_service">При использовании сервиса Edusty Вы соглашаетесь с <u><blue>Правилами пользования</blue></u>.</string>
    <string name="text_terms"><b>Правила пользования сервисом Edusty\n</b>         1. Запрещена публикация материалов, запрещённых законодательством РФ.\n
        2. Запрещено использовать автоматизированные средства генерации контента в сервисе Edusty.\n
        3. Запрещено использовать API сервиса Edusty вне официальных приложений сервиса Edusty без письменного разрешения администрации сервиса Edusty.\n
        4. Администрация сервиса Edusty не гарантирует отсутствие ошибок в работе сервиса Edusty и не несет ответственность за его бесперебойную работу.\n
        5. Администрация сервиса Edusty не несет ответственность за потерю материалов или за причинение любых убытков, которые возникли или могут возникнуть при использовании сервиса Edusty.\n
        6. Администрация сервиса Edusty не несет ответственность за неисполнение либо ненадлежащее исполнение своих обязательств вследствие сбоев в телекоммуникационных и энергетических сетях, действий вредоносных программ, а также недобросовестных действий третьих лиц, направленных на несанкционированный доступ или выведение из строя сервиса Edusty.</string>
    <string name="title_activity_suggested_groups">Выбор группы</string>
    <string name="go_to_search">Перейти к поиску</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="title_activity_add_university">Добавление ВУЗа</string>
    <string name="title">Название</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="add_university_warning">*При предоставлении недостоверной информации администрация сервиса имеет право удалить ВУЗ.</string>

</resources>
