<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.edusty.android.Activities.AddUniversityActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/title"
        android:layout_margin="4dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCountry"
        android:layout_below="@+id/etTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/country"
        android:layout_margin="4dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCity"
        android:layout_below="@+id/etCountry"
        android:layout_centerHorizontal="true"
        android:hint="@string/city"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/add_university_warning"
        android:id="@+id/textView"
        android:layout_below="@+id/etCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp"/>
</RelativeLayout>
