<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.edusty.android.Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="4dp"
            android:scaleType="fitCenter" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etFirstName"
            android:hint="@string/firstname"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etLastName"
            android:hint="@string/lastname"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvUniversity_Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/btnVkProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edustytheme_btn_default_holo_light"
            android:drawableStart="@drawable/ic_vk"
            android:gravity="start|center_vertical"
            android:onClick="onClickBtnVkProfile"
            android:layout_margin="4dp"
            android:text="Профиль Вконтакте"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnFacebookProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edustytheme_btn_default_holo_light"
            android:drawableStart="@drawable/ic_facebook"
            android:gravity="start|center_vertical"
            android:onClick="onClickBtnFacebookProfile"
            android:layout_margin="4dp"
            android:text="Профиль Facebook"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <Button
            android:id="@+id/btnOdnoklassnikiProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edustytheme_btn_default_holo_light"
            android:drawableStart="@drawable/ic_ok"
            android:gravity="start|center_vertical"
            android:onClick="onClickBtnOdnoklassnikiProfile"
            android:layout_margin="4dp"
            android:text="Профиль Одноклассники"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <Button
            android:id="@+id/btnGooglePlusProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edustytheme_btn_default_holo_light"
            android:drawableStart="@drawable/ic_googleplus"
            android:gravity="start|center_vertical"
            android:onClick="onClickBtnGooglePlusProfile"
            android:layout_margin="4dp"
            android:text="Профиль Google"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:onClick="onClickBtnChangePassword"
            android:layout_margin="4dp"
            android:text="@string/change_password"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>